--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -38,7 +38,7 @@
     text-align: center;
   }
   // background: url(back_pattern.png) repeat center center;
-  opacity: .4;
+  // opacity: .4;
 }
 
 .carousel-caption {
