--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -14,7 +14,7 @@
 					</div> <!-- /inner nav -->
 					<div class="jumbotron">
 						<h1 class="welcome-banner">
-						 100 Motels Demo<br>
+						 100 Motels<br>
 						 <small>100 Motels is an idea I have to help independent musicians like myself get out on tour without industry backing or paying to play.</small>
 						</h1>
 					</div>
@@ -23,20 +23,20 @@
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>Funding</h2>
-	          <p>100 Motels lets you fund potential shows without taking on any financial liability until you're sure it's viable. Also all monies go straight to the Organizers bank account - we don't hold your cash.</p>
-	          <p align="center"><a class="btn" href="#">View details »</a></p>
+	          <p>100 Motels lets you fund a potential show without taking on any financial liability until you're sure it's viable. Also all monies go straight to the Organizer's bank account - we don't hold your cash.</p>
+	          <p align="center"><a class="btn" href="#">Learn More »</a></p>
 	        </div>
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>Organizing</h2>
 	          <p>Everything you would expect of a modern ticketing platform. Hassle free purchases, barcoded tickets and a mobile app 'Doorman' for keeping track of things on the night.</p> <br>
-	          <p align="center"><a class="btn" href="#">View details »</a></p>
+	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "organizer"), class: "btn" %></p>
 	        </div>
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>A World Tour</h2>
-	          <p>If you have a single fan in a particular city then that's potentially a show. We will give anyone a chance to organize a tour for an Artist. Hustlers, conmen or pay for play will not be tolerated. </p> <br>
-	          <p align="center"><a class="btn" href="#">View details »</a></p>
+	          <p>A single fan in a particular city is potentially a show. We will give anyone a chance to organize a tour date for an Artist. Hustlers, conmen or pay for play will not be tolerated. </p> <br>
+	          <p align="center"><a class="btn" href="#">Learn More »</a></p>
 	        </div>
 				</div> <!-- /headlines -->
 			</div>
@@ -233,8 +233,7 @@
 								<br>
 								<p>Artists can do three things on 100 Motels: Add a playlist of their music; make a tour request; make a support request. If they end up playing a show, everything bar the performance will be taken care of by the organizer. It's just like the pro's, except you don't have to make commercial music to play.<strong> You will never pay to play.</strong></p> <br>
 							  <p>Anyone who has a credit card can organize, but it will be controlled until the service matures. The first organizers will be radio hosts, bloggers and other proven contributers to music without profit who naturally command a crowd. Check out the organizers in this demo, all people who I discovered through my music.</p> <br>
-								<p>Along with offloading the organizational burden from the artist there were two other pillar issues that precipitated the idea for 100 Motels: Risk and Attendance. You can organize or fund a 100 Motels show without incurring any costs. A successful campaign is always realised in terms of attaining a target attendance. </p> <br>
-								<p>Follow the adjacent links for more info or for the full details of the implementation <%= link_to "go here.", info_path %> </p>
+								<p>Along with offloading the organizational burden from the artist there were two other pillar issues that precipitated the idea for 100 Motels: Risk and Attendance. You can fund a 100 Motels show without incurring any costs until you're happy with the attendance. There no time-frame outside of what you decide yourself - dates and prices can be altered without penalty. </p> <br>
 							</blockquote>
 							<p class="pull-right"><a href="#">back to top</a></p>
 						</div>
