--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -139,7 +139,7 @@
 				                <% end %>
 													<div class="caption">
 														<h3 class="title"><%= profile[0].promoter_name || profile[0].user.name %></h3>
-														<h4>location</h4>
+														<!-- <h4>location</h4> -->
 														<%= button_to "Full Profile", profile_path(profile[0]), method: :get, class: "btn btn-primary" %>
 												</div>
 											<% end %>
@@ -155,7 +155,7 @@
 				                <% end %>
 												<div class="caption">
 													<h3 class="title"><%= profile[1].promoter_name || profile[1].user.name %></h3>
-													<h4>location</h4>
+													<!-- <h4>location</h4> -->
 													<%= button_to "Full Profile", profile_path(profile[1]), method: :get, class: "btn btn-primary" %>
 												</div>
 											<% end %>
@@ -171,7 +171,7 @@
 				                <% end %>
 												<div class="caption">
 													<h3 class="title"><%= profile[2].promoter_name || profile[2].user.name %></h3>
-													<h4>location</h4>
+													<!-- <h4>location</h4> -->
 													<%= button_to "Full Profile", profile_path(profile[2]), method: :get, class: "btn btn-primary" %>
 												</div>
 											<% end %>
@@ -187,7 +187,7 @@
 				                <% end %>
 												<div class="caption">
 													<h3 class="title"><%= profile[3].promoter_name || profile[3].user.name %></h3>
-													<h4>location</h4>
+													<!-- <h4>location</h4> -->
 													<%= button_to "Full Profile", profile_path(profile[3]), method: :get, class: "btn btn-primary" %>
 												</div>
 											<% end %>
