some small fixes

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
 							<li class="nav-header" id="index-filter">Date of Event</li>
 							<li class=""><%= link_to "Today", request.path + '?tonight=true' %></li>
 							<li class=""><%= link_to "This Week", request.path + '?week_end=true' %></li>
-							<li class="active"><%= link_to "This Month", request.path + '?month_end=true' %></li>
+							<li class=""><%= link_to "This Month", request.path + '?month_end=true' %></li>
 							<li class="divider"></li>
 							<li class="nav-header">Location</li>
 							<form class="city-select" method="get">
