--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -37,7 +37,7 @@
           <% end %>
           <li class="divider"></li>
           <li>
-            <%= link_to "All Requests >>", requests_path, class: "btn btn-large" %>
+            <%= link_to "All Requests >>", requests_path, class: "btn btn-large all-requests" %>
           </li>
         </ul>
       </div><!--/.well -->
@@ -51,11 +51,7 @@
           <h4>Public Profile</h4>
 
           <p>Your public profile is where people can view information and statistics about all the shows you have organized. You can edit it in place by clicking on the edit link at the top of your profile. You can also hide or delete your profile at any time, by default your profile is hidden. </p> <br>
-          <% if current_user.profile %>
-            <p><%= link_to "View >>", promoter_profile_path(current_user.profile), class: "btn btn-primary" %></p>
-          <% else %>
-            <p><%= link_to "Create your Profile", promoter_profiles_path, method: :post, class: "btn btn-success" %></p>
-          <% end %>
+          <p><%= link_to "View >>", promoter_profile_path(current_user.profile), class: "btn btn-primary" %></p>
         </div><!--/span-->
         <div class="span6">
           <h4>Your Events</h4>
