fixed locatin problem

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,7 @@
 					<div class="span4">
 	          <!-- <img class="img-circle" src="http://placehold.it/140x140"> -->
 	          <h2>A World Tour</h2>
-	          <p>A single fan in a particular city is potentially a show. We will give anyone a chance to organize a tour date for an Artist. Hustlers, conmen or pay for play will not be tolerated. </p> <br>
+	          <p>A single fan in a particular city is potentially a show. I want to give anyone a chance to organize a tour date for an Artist. Hustlers, conmen or pay for play will not be here. </p> <br>
 	          <p align="center"><a class="btn" href="#">Learn More »</a></p>
 	        </div>
 				</div> <!-- /headlines -->
