--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -36,24 +36,25 @@
 
     <section id="user-index-grid" class="span9">
           <ul class="thumbnails">
-            <% @user_profiles.each do |up| %>
+            <% @profiles.each do |profile| %>
             <li class="span3">
               <a class="thumbnail" href="#">
-                <% if up.profile.image? %>
-                  <%= filepicker_image_tag up.profile.image, w: 300, h: 240, fit: 'crop' %>
+                <% if profile.image? %>
+                  <%= filepicker_image_tag profile.image, w: 300, h: 240, fit: 'crop' %>
                 <% else %>
                   <img src="http://placehold.it/300x240" alt="">
                 <% end %>
               </a>
               <h3>
-                <%= up.profile.promoter_name || up.name  %>
+                <%= profile.promoter_name || "promoter name"  %>
               </h3>
-              <p><%= up.profile.quick_profile || "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ." %>.</p>
-              <p><%= button_to "View Profile", profile_path(up.profile), method: :get, class: "btn button-primary" %></p>
+              <p><%= truncate profile.about, length: 250, separator: '.' || "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua." %></p>
+              <p><%= button_to "View Profile", profile_path(profile), method: :get, class: "btn button-primary" %></p>
             </li>
             <% end %>
           </ul>
-          <%= will_paginate @user_profiles %>
+          <%= will_paginate @profiles %>
     </section>
   </div>
 </div>
