--- a/app/views/promoter/profiles/show.html.erb
+++ b/app/views/promoter/profiles/show.html.erb
@@ -34,11 +34,13 @@
           </h2>
         </div>
         <h4><p class="muted">
-          <% if @profile.user.location %>
-            <%= @profile.user.location.city %>, <%= @profile.user.location.country %>
-          <% else %>
-              set a location in your user account
-          <% end %>
+          <div id="location">
+            <% if @profile.location %>
+              <%= @profile.location.city %>, <%= @profile.location.country %>
+            <% else %>
+              location not set
+            <% end %>
+          </div>
         </p></h4>
       </div>
       <div class="span2 offset2">
@@ -199,7 +201,7 @@
       </div>
       <div class="span6" id="promoter-media" align="center">
         <h5>Youtube, vimeo, soundcloud or images here.</h5>
-        <div data-mercury="simple" id="media">
+        <div id="media">
           <%= @profile.promoter_media %>
         </div>
         <br>
