--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,7 +1,6 @@
 <div class="container">
   <div class="row-fluid">
-    <div class="span3">
-      <div class="" >
+    <div class="span3" style="position: abolute; top:30px;">
         <ul class="nav nav-list well" >
           <li class="nav-header">About the Founder</li>
 
@@ -27,8 +26,7 @@
           <li><a href="#">Privacy</a></li>
           <li><a href="#">Terms of Service</a></li>
         </ul>
-      </div> <!-- /well -->
-    </div>
+    </div> <!-- /span3 -->
     <div class="span9">
       <!-- 100 Motels poster -->
       <section id="intro">
