tiding up Gers bugs

--- a/app/assets/stylesheets/promoter/base.css.scss
+++ b/app/assets/stylesheets/promoter/base.css.scss
@@ -13,12 +13,12 @@
   min-height: 350px;
 }
 
-#update-menu  {
-  height: 100%;
-  min-height: 350px;
-}
+// #update-menu  {
+//   height: 100%;
+//   min-height: 350px;
+// }
 
-.all-requests {
-  position: absolute;
-  bottom: 60px;
-}
+// .all-requests {
+//   position: absolute;
+//   bottom: 20px;
+// }
