--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -151,14 +151,14 @@
             <% else %>
               <p>General advice about airports and ground transport would be a great help, especially when trying to work out a budget for the show.</p>
               <p>Which airlines to use, is there a cheap time to come to your city, general tips and hints about hauling gear or not? You probably know these things from experience.</p>
-              <p>Another important consideration for international artists is the visa / immigration situation. In many countries, musicians are officially or unofficially excepted from normal work restrictions but that may not be the case in your coutnry.</p>
+              <p>Another important consideration for international artists is the visa / immigration situation. In many countries, musicians are officially or unofficially excepted from normal work restrictions but that may not be the case in your country.</p>
             <% end %>
           </div>
           <div class="tab-pane" id="accomodation">
             <% if @profile.accomodation? %>
               <%= raw @profile.accomodation %>
             <% else %>
-              <p>Try to aim slightly higher than couchsurf but as long as you offer some kind of definite accomodation or to organize it than good enough. Couches, hostels or hotels, free or priced into the show, as long as the artists are looked after.</p>
+              <p>Try to aim slightly higher than couchsurf but as long as you offer some kind of definite accommodation or to organize it than good enough. Couches, hostels or hotels, free or priced into the show, as long as the artists are looked after.</p>
               <p> Leaving bands roofless after a show or any other music industry type behaviour will not be tolerated!</p>
             <% end %>
           </div>
