--- a/app/views/promoter/base/index.html.erb
+++ b/app/views/promoter/base/index.html.erb
@@ -1,7 +1,9 @@
 <div class="container-fluid">
   <div class="row-fluid row">
     <div class="span2">
-      <% if current_user.avatar? %>
+      <% if current_user.profile.image? %>
+        <%= filepicker_image_tag current_user.profile.image, w: 75, h: 75, fit: 'crop' %>
+      <% elsif current_user.avatar? %>
         <%= filepicker_image_tag current_user.avatar, w: 75, h: 75, fit: 'crop' %>
       <% else %>
         <img src="//placehold.it/75" class="img-polaroid">
@@ -37,9 +39,10 @@
           <% end %>
           <li class="divider"></li>
           <li>
-            <%= link_to "All Requests >>", requests_path, class: "btn btn-large all-requests" %>
+
           </li>
         </ul>
+        <%= link_to "All Requests >>", requests_path, class: "btn all-requests" %>
       </div><!--/.well -->
     </div><!--/span-->
 
