unread pane added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
                     <li> <%= link_to "Admin", promoter_root_path %>  </li>
                     <li> <%= link_to "Public Profile", profile_path(current_user.profile) %>  </li>
                     <li> <%= link_to "Events", promoter_events_path %>  </li>
+                    <li> <%= link_to "Requests", requests_path %>  </li>
                     <% end %>
                   <% end %>
                 </ul>
