--- a/app/assets/stylesheets/requests.css.scss
+++ b/app/assets/stylesheets/requests.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the requests controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.submit-link {
+  color: #0088cc;
+  text-decoration: none;
+}
