--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,4 +1,5 @@
 <div class="fill container">
+  <%= form_tag  mark_read_requests_path, method: :post  do %>
   <div class="row">
     <div class="span3"><p class="lead">Your Current Requests</p></div>
     <div class="span1">
@@ -11,7 +12,7 @@
           <span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-          <li><a href="">Mark Read</a></li>
+          <li><%= submit_tag "Mark Read", name: nil %></li>
         </ul>
       </div>
     </div>
@@ -19,38 +20,80 @@
   <hr>
   <div class="row">
     <div class="span12">
-          <table class="table" id="requests">
-            <thead>
-              <tr>
-                <th>
-                  <button type="button" id="check_all", class="btn btn-mini">
-                    <i class="icon-ok"></i>
-                  </button>
-                </th>
-                <th>Support / Tour</th>
-                <th>Requested</th>
-                <th>Name</th>
-                <th>Email</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @requests.each do |request| %>
+      <div class="tabbable">
+        <ul class="nav nav-tabs">
+          <li class="active">
+            <a href="#unread" data-toggle="tab">Unread</a>
+          </li>
+          <li><a href="#all" data-toggle="tab">All Requests</a></li>
+        </ul>
+        <div class="tab-content">
+          <div class="tab-pane active" id="unread">
+            <table class="table" id="requests">
+              <thead>
                 <tr>
-                  <td><%= check_box_tag "request_ids[]", request.id %> </td>
-                  <td><%= request.event ? Event.find(request.event_id).artist : "Tour Requested"  %></td>
-                  <td><%= distance_of_time_in_words_to_now(request.created_at, include_seconds = false) %> ago</td>
-                  <td><%= request.user.name %></td>
-                  <td><%= request.user.email %></td>
-                  <td><span class="label"><%= request.state %></span></td>
-                  <td><%= link_to raw('<i class="icon-music"></i>'), "", id: "media-preview", class: "btn", data: { media: "#{request.user.media_html}"} %></td>
+                  <th>
+                    <button type="button" id="check_all", class="btn btn-mini">
+                      <i class="icon-ok"></i>
+                    </button>
+                  </th>
+                  <th>Support / Tour</th>
+                  <th>Requested</th>
+                  <th>Name</th>
+                  <th>Email</th>
                 </tr>
-              <% end %>
-            </tbody>
-          </table>
-
-    </div>
-  </div>
-</div>
+              </thead>
+              <tbody>
+                <% @unread.each do |request| %>
+                  <tr>
+                    <td><%= check_box_tag "request_ids[]", request.id %> </td>
+                    <td><%= request.event ? Event.find(request.event_id).artist : "Tour Requested"  %></td>
+                    <td><%= distance_of_time_in_words_to_now(request.created_at, include_seconds = false) %> ago</td>
+                    <td><%= request.user.name %></td>
+                    <td><%= request.user.email %></td>
+                    <td><span class="label"><%= request.state %></span></td>
+                    <td><%= link_to raw('<i class="icon-music"></i>'), "", id: "media-preview", class: "btn", data: { media: "#{request.user.media_html}"} %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div> <!-- /tab pane -->
+          <div class="tab-pane" id="all">
+            <table class="table" id="requests">
+              <thead>
+                <tr>
+                  <th>
+                    <button type="button" id="check_all", class="btn btn-mini">
+                      <i class="icon-ok"></i>
+                    </button>
+                  </th>
+                  <th>Support / Tour</th>
+                  <th>Requested</th>
+                  <th>Name</th>
+                  <th>Email</th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @requests.each do |request| %>
+                  <tr>
+                    <td><%= check_box_tag "request_ids[]", request.id %> </td>
+                    <td><%= request.event ? Event.find(request.event_id).artist : "Tour Requested"  %></td>
+                    <td><%= distance_of_time_in_words_to_now(request.created_at, include_seconds = false) %> ago</td>
+                    <td><%= request.user.name %></td>
+                    <td><%= request.user.email %></td>
+                    <td><span class="label"><%= request.state %></span></td>
+                    <td><%= link_to raw('<i class="icon-music"></i>'), "", id: "media-preview", class: "btn", data: { media: "#{request.user.media_html}"} %></td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+          </div> <!-- /tab pane -->
+        </div> <!-- /tab content -->
+      </div> <!-- /tabbable -->
+    </div> <!-- /span12 -->
+  </div> <!-- /row -->
+  <% end %>
+</div> <!-- /container -->
 <div class="modal large hide fade" id="preview-modal">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
