--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -217,7 +217,7 @@
 			          <li><%= link_to "Organizing", info_path(anchor: "organizer") %></li>
 			          <li><%= link_to "Artists", info_path(anchor: "artist") %></li>
 			          <li><%= link_to "Funding", info_path(anchor: "touring") %></li>
-			          <li><%= link_to "Supporting", info_path(anchor: "supporting") %></li>
+			          <li><%= link_to "Requests", info_path(anchor: "requests") %></li>
 			          <li><%= link_to "Attending", info_path(anchor: "attending") %></li>
 			          <br>
 			          <li class="divider"></li>
