--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -11,10 +11,10 @@
           <li><a href="//seocahill.com">blog</a></li>
           <li class="nav-header">About 100 Motels</li>
 
-          <li><a href="#">Funding</a></li>
           <li><a href="#artist">Artists</a></li>
           <li><a href="#organizer">Organizing a Show</a></li>
           <li><a href="#attending">Supporting a Show</a></li>
+          <li><a href="#requests">Requests</a></li>
 
           <li class="nav-header">Technical info</li>
           <li><a href="#">Development</a></li>
@@ -46,18 +46,28 @@
         <!-- START THE FEATURETTES -->
 
         <div class="featurette">
-          <!-- <img class="featurette-image pull-right img-circle" src="//placehold.it/200"> -->
-          <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
           <div class="page-header"><h1 class="featurette-heading" id="artist">The Artist. <span class="muted">Concentrate on Performing.</span></h1></div>
           <p class="lead"><strong>PR, lobbying or industry experience is irrelevant on 100 Motels.</strong> Music decides, there is no other consideration. So make recordings you like, get them out into the commons and then practice your performance. </p>
           <p class="lead">After you sign up add a music or video playlist to your profile. Look through local events for a support slot, or organizer profiles if you're looking to tour a particular location. To register your interest just click the request button on the event/organizer profile page. The organizer will receive a private message with your media and contact email. You can track and cancel all requests in your user account. </p>
           <p class="lead">If you receive an offer to tour from an Organizer you need to agree a sales target to cover your costs, once that's done you can expect the Organizer to handle everything else. </p>
-
-
         </div>
         <a href="#">Back to top</a>
         <!-- <hr class="featurette-divider"> -->
-
+        <div class="featurette" id="requests">
+          <div class="page-header">
+            <h1 class="featurette heading">Requests.<span class="muted"> Music first.</span></h1>
+            <p class="lead">
+              <strong>Artists in general, have to do way too much.</strong> Especially leading up to a big show this can have a major impact on the performance. So I designed 100 Motels to have as minimal a requirement for Artist participation as possible. Show requests are like that, there are three basic steps:
+            </p>
+            <ul class="lead">
+              <li>Sign up for a normal user account and then add Artist media in your User Account Settings</li><br>
+              <li>You will see a 'Request Support' button at the top of every Event page, click it and the Organizer of that event will recieve your request to play as a support act for that event along with your supplied media and contact details.</li><br>
+              <li>Likewise if you are browsing Organizer profiles you will see "Request Tour" instead. Again the Organizer will receive your media and contact details. </li><br>
+            </ul>
+            <p class="lead"> Should your request be successful you will be contacted by the Organizer, you can follow the status of you requests by checking your user account.</p>
+          </div>
+          <a href="#">Back to top</a>
+        </div>
         <div class="featurette" id="organizer">
           <%#= image_tag "cb-black.png", class: "featurette-image pull-right img-circle" %>
           <div class="page-header"><h1 class="featurette-heading">The Organizer. <span class="muted">Put your musical opinions on Stage.</span></h1></div>
