popover for requests working now

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,28 +44,28 @@
               <li class="divider-vertical"></li>
               <li class="dropdown">
                 <% if user_signed_in? %>
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Organizer menu<b class="caret"></b></a>
-                <% end %>
-                <ul class="dropdown-menu">
-                  <% if user_signed_in? %>
-                    <% if current_user.has_role? :promoter %>
-                    <li> <%= link_to "Admin", promoter_root_path %>  </li>
-                    <li> <%= link_to "Public Profile", profile_path(current_user.profile) %>  </li>
-                    <li> <%= link_to "Events", promoter_events_path %>  </li>
-                    <li> <%= link_to "Requests", requests_path %>  </li>
-                    <% end %>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">organizer menu<b class="caret"></b></a>
                   <% end %>
-                </ul>
+                  <ul class="dropdown-menu">
+                    <% if user_signed_in? %>
+                      <% if current_user.has_role? :promoter %>
+                      <li> <%= link_to "Admin", promoter_root_path %>  </li>
+                      <li> <%= link_to "Public Profile", profile_path(current_user.profile) %>  </li>
+                      <li> <%= link_to "Events", promoter_events_path %>  </li>
+                      <li> <%= link_to "Requests", requests_path %>  </li>
+                      <% end %>
+                    <% end %>
+                  </ul>
               </li>
               <li class="dropdown">
                 <% if user_signed_in? %>
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "User Account", current_user %></li>
-                  <li><%= link_to "Account Settings", edit_registration_path(current_user) %></li>
-                    <li class="divider"></li>
-                  <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
-                </ul>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %><b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to "User Account", current_user %></li>
+                    <li><%= link_to "Account Settings", edit_registration_path(current_user) %></li>
+                      <li class="divider"></li>
+                    <li><%= link_to "Sign out", destroy_user_session_path, :method => 'delete' %></li>
+                  </ul>
                 <% end %>
               </li>
             </ul>
