corrected restricted menues

--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -55,7 +55,7 @@
         <!-- <hr class="featurette-divider"> -->
         <div class="featurette" id="requests">
           <div class="page-header">
-            <h1 class="featurette heading">Requests.<span class="muted"> Music first.</span></h1>
+            <h1 class="featurette heading">Requests.<span class="muted"> Music comes first.</span></h1>
             <p class="lead">
               <strong>Artists in general, have to do way too much.</strong> Especially leading up to a big show this can have a major impact on the performance. So I designed 100 Motels to have as minimal a requirement for Artist participation as possible. Show requests are like that, there are three basic steps:
             </p>
